--- a/package.json
+++ b/package.json
@@ -1,35 +1,25 @@
 {
-  "homepage": " https://oguzhangkckc.github.io/",
-  "name": "react-portfolio",
+  "name": "portfolio",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next export"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.5",
-    "@swc/helpers": "^0.5.1",
-    "eslint": "8.36.0",
-    "eslint-config-next": "13.2.4",
-    "next": "^13.2.4",
+    "@types/node": "20.6.0",
+    "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.7",
+    "autoprefixer": "10.4.15",
+    "eslint": "8.49.0",
+    "eslint-config-next": "13.4.19",
+    "next": "13.4.19",
+    "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.8.0",
-    "react-redux": "^8.1.2",
-    "react-router-dom": "^6.9.0",
-    "react-router-hash-link": "^2.4.3",
-    "react-scroll": "^1.8.9",
-    "yarn": "^1.22.19"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "gh-pages": "^5.0.0",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7",
-    "webpack": "^5.77.0",
-    "webpack-cli": "^5.0.1"
+    "tailwindcss": "3.3.3",
+    "typescript": "5.2.2"
   }
 }
